fixed animations clipping through menu, changed the menu button in mobile mode

--- a/src/Components/Frame.css
+++ b/src/Components/Frame.css
@@ -27,11 +27,12 @@
 }
 
 #root > * {
-    height: 100%;
-    width: 100%;
+    height: 100dvh;
+    width: 100dvw;
     margin: 0;
     padding: 10px;
     overflow: hidden;
+    position: sticky;
 }
 
 #top-bar {
@@ -79,13 +80,17 @@
 
 #search-bar-bottom {
     field-sizing: content;
-    min-width: 10%;
-    max-width: 50%;
-    visibility: collapse;
+    margin-right: 2%;
+    width: 80%;
+    border-image: none;
+}
+
+#search-bar-bottom:active {
+    border-image: none;
 }
 
 #search-button {
-    width: 20%;
+    width: 18%;
     visibility: collapse;
 }
 
@@ -94,6 +99,7 @@
     border-right: 1px solid white;
     background-color: #000e;
     overflow: auto;
+    z-index: 9;
 }
 
 #side-bar ul {
@@ -203,11 +209,6 @@
         visibility: collapse;
     }
 
-    #search-bar-bottom {
-        visibility: visible;
-        min-width: 80%;
-    }
-
     #search-button {
         visibility: visible;
         background-color: transparent;
@@ -222,10 +223,10 @@
         position: fixed;
         width: 100vw;
         height: fit-content;
-        /* visibility: collapse; */
+        max-height: 89dvh;
         border-bottom: 1px solid white;
         border-right: none;
-        overflow: hidden;
+        overflow: auto;
         padding-top: 0; padding-bottom: 0; margin-top: 0; margin-bottom: 0;
         animation: .25s forwards ease-out;
     }
